I just made  changes to the sizes of home images at mobile view, fix the gap of contact section from rem to px

--- a/scss/_contact.scss
+++ b/scss/_contact.scss
@@ -44,7 +44,7 @@ section#contact {
         flex-direction: column;
         justify-content: flex-start;
         align-items: flex-start;
-        gap: 1rem;
+        gap: 16px;
         margin-top: 4rem;
         text-align: start;
        
@@ -71,6 +71,7 @@ button {
     @include black-home-btns;
     padding-left: 40px;
     padding-right: 40px;
+   
 }
     
 }
