--- a/scss/main.scss
+++ b/scss/main.scss
@@ -36,7 +36,7 @@ position: relative;
     position: fixed;
     justify-content: space-between;
     align-items: center;
-    z-index: 2;
+    z-index: 3;
       padding: 2rem 5vw;
    
       &.scroll {
